# wikiquotes-python-api

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  directory.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
docs/: Makefile  issue_template.md  make.bat
docs/source/: conf.py  index.rst
src/: wikiquotes.py
src/Managers/: APIManager.py  HTMLManager.py
src/Tests/: QuoteLengthTest.py  QuoteTest.py
tests/: quote_length_test.py  quote_test.py  test_context.py
tests/authors/: Author.py  dijkstra.txt  hau_pei_tsun.txt  jack_abbott.txt  reuben_abel.txt
tests/test_suite/: author_test.py  encoding_test.py  parametrized_test_case.py
wikiquotes/: __init__.py  directory.py  wikiquotes.py  wikiquotes_api.py
wikiquotes/languages/: English.py  english.py  spanish.py
wikiquotes/managers/: APIManager.py  api_manager.py  custom_exceptions.py  file_manager.py  html_manager.py  json_parser.py  language_manager.py  logging_manager.py  python_version_manager.py
